ask-conformix WIP
